fixed section size on mobile and desktop

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -46,7 +46,7 @@ a {
   line-height: 2rem;
 }
 
-.text-md, body {
+.text-md {
   font-size: 1.125rem;
   font-weight: 700;
   line-height: 1.75rem;
@@ -109,7 +109,7 @@ a {
   line-height: 2rem;
 }
 
-.text-md, body {
+.text-md {
   font-size: 1.125rem;
   font-weight: 700;
   line-height: 1.75rem;
@@ -159,16 +159,32 @@ body {
   color: hsl(215.4, 16.3%, 56.9%);
 }
 
+.offset {
+  position: relative;
+  top: 100px;
+}
+
+.box {
+  margin: 10rem;
+  height: 100px;
+  width: 100px;
+}
+
+.section-center {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .navbar {
   position: fixed;
-  width: 100%;
+  left: 0;
+  right: 0;
   z-index: 99;
   background-color: rgba(1, 4, 9, 0.4);
   backdrop-filter: blur(8px);
-  border-bottom: 1px dotted rgba(128, 128, 128, 0.74);
-  padding: 1rem;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.24);
   display: flex;
-  align-items: center;
+  padding: 1rem;
   justify-content: center;
 }
 .navbar .navbar-center {
@@ -176,11 +192,11 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 400px;
+  margin: 0 auto;
 }
 .navbar .navbar__menu-center {
-  min-width: 500px;
   display: flex;
-  column-gap: 2rem;
+  column-gap: 1rem;
   justify-content: space-between;
 }
 .navbar .navbar__toggle {
@@ -229,17 +245,6 @@ body {
   min-width: 50px;
 }
 
-.offset {
-  position: relative;
-  top: 200px;
-}
-
-.box {
-  margin: 10rem;
-  height: 100px;
-  width: 100px;
-}
-
 .d-border {
   height: 100%;
   cursor: pointer;
@@ -283,25 +288,15 @@ body {
   transition: 1s cubic-bezier(0.37, 0, 0.63, 1) 0s;
 }
 
-section.hero {
-  min-height: 200px;
-  position: relative;
-}
 section.hero .section-center {
-  padding: 3rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
-section.skills {
-  padding: 3rem;
-}
 section.skills .skills-center {
-  max-width: 1300px;
-  margin: 0 auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
 section.skills .skill-card {
@@ -325,14 +320,8 @@ section.skills .skills-center {
   display: flex;
 }
 
-.timeline-2 {
-  background-color: black;
-}
-
 .timeline-1, .timeline-2 {
-  padding: 3rem;
   /* line */
-  /* columns*/
   /* row gaps */
   /* card */
   /* date */
@@ -398,8 +387,6 @@ section.skills .skills-center {
 .timeline-1 .timeline-card .title,
 .timeline-1 .timeline-card .descr, .timeline-2 .timeline-card .title,
 .timeline-2 .timeline-card .descr {
-  background: lightblue;
-  color: black;
   position: relative;
   padding-inline: 1.5rem;
 }
@@ -415,16 +402,12 @@ section.skills .skills-center {
 }
 
 @media only screen and (min-width: 768px) {
-  .navbar {
-    height: 86px;
-  }
   .navbar .navbar-center {
     column-gap: 5rem;
-    margin: 0 auto;
-    width: 992px;
     justify-content: start;
+    width: 992px;
   }
-  .section .section-center {
+  .section {
     margin: 0 auto;
     width: 992px;
   }
@@ -459,15 +442,7 @@ section.skills .skills-center {
   }
 }
 @media only screen and (min-width: 768px) and (min-width: 1024px) {
-  .navbar {
-    height: 86px;
-  }
-  .navbar .navbar-center {
+  .section {
     margin: 0 auto;
-    width: 1300px;
-  }
-  .section .section-center {
-    margin: 0 auto;
-    width: 1300px;
   }
 }
