--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -3,44 +3,53 @@
 
 
 body {
-  @extend .text-md;
   background-color: rgba(1, 4, 9, 0.93);
   color: hsla(215.4 16.3% 56.9%);
 }
 
-
-// ICONS
-
-.icon {
-  img {
-  }
+.offset {
+  position: relative;
+  top: 100px;
 }
+
+.box {
+  margin: 10rem;
+  height: 100px;
+  width: 100px;
+}
+
+
+.section-center{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 
 
 // NAVBAR
 .navbar {
   position: fixed;
-  width: 100%;
+  left: 0;
+  right: 0;
   z-index: 99;
-background-color: rgba(1, 4, 9, 0.4);
+  background-color: rgba(1, 4, 9, 0.4);
   backdrop-filter: blur(8px);
-  border-bottom: 1px dotted rgba(128, 128, 128, 0.74);
-  padding: 1rem;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.24);
   display: flex;
-  align-items: center;
+  padding: 1rem;
   justify-content: center;
 
   .navbar-center {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: $max-w-sm;
+    width: 400px;
+    margin: 0 auto;
   }
 
   .navbar__menu-center {
-    min-width: 500px;
     display: flex;
-    column-gap: 2rem;
+    column-gap: 1rem;
     justify-content: space-between;
   }
 
@@ -112,19 +121,8 @@ background-color: rgba(1, 4, 9, 0.4);
 
 }
 
-.offset {
-  position: relative;
-  top: 200px;
-}
-
 
 // FANCY BORDER
-
-.box {
-  margin: 10rem;
-  height: 100px;
-  width: 100px;
-}
 
 
 .d-border {
@@ -182,29 +180,22 @@ background-color: rgba(1, 4, 9, 0.4);
 }
 
 
-// SECTION HERO
-
 section.hero {
-  min-height: 200px;
-  position: relative;
-
   .section-center {
-    padding: 3rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
+
+
   }
 
 }
 
 section.skills {
-  padding: 3rem;
 
   .skills-center {
-    max-width: $max-w-xl;
-    margin: 0 auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
   }
 
@@ -241,12 +232,8 @@ section.skills {
 
 // TIMELINE
 
-.timeline-2 {
-  background-color: black;
-}
 
 .timeline-1, .timeline-2 {
-  padding: 3rem;
 
   .timeline-center {
     --col-gap: 2rem;
@@ -270,7 +257,6 @@ section.skills {
     border-radius: calc(var(--line-w) / 2);
   }
 
-  /* columns*/
 
   /* row gaps */
   .timeline-card:not(:last-child) {
@@ -321,10 +307,7 @@ section.skills {
   /* title descr */
   .timeline-card .title,
   .timeline-card .descr {
-    background: lightblue;
-    color: black;
     position: relative;
-
     padding-inline: 1.5rem;
   }
 
@@ -347,24 +330,23 @@ section.skills {
 
 @media only screen and (min-width: map-get($breakpoints, "md")) {
   .navbar {
-    height: 86px;
 
     .navbar-center {
       column-gap: 5rem;
-      margin: 0 auto;
-      width: $max-w-lg;
       justify-content: start;
-
+      width: 992px;
+      //border: 1px solid white;
     }
   }
 
   .section {
+    margin: 0 auto;
+    width: 992px;
+    //border: 1px solid white;
 
     .section-center {
-      margin: 0 auto;
-      width: $max-w-lg;
-    }
 
+    }
   }
 
 
@@ -411,30 +393,21 @@ section.skills {
 
   @media only screen and (min-width: map-get($breakpoints, "lg")) {
     .navbar {
-      height: 86px;
 
       .navbar-center {
-        margin: 0 auto;
-        width: $max-w-xl;
+
 
       }
     }
 
     .section {
+      margin: 0 auto;
 
       .section-center {
-        margin: 0 auto;
-        width: $max-w-xl;
+
       }
 
-
     }
-
-    .timeline-1, .timeline-2 {
-
-
-    }
-
 
   }
 }
